# cef_gui

./: .gitignore  CMakeLists.txt  build.sh  pack.sh  start.sh
core/: CMakeLists.txt  basic_client.cpp  basic_client.h  common.cpp  common.h  demo.cpp  msg_handler.cpp  msg_handler.h
core/src/: common.h  demo.cpp  msg_handler.cpp  msg_handler.h
render/: package-lock.json  package.json  tsconfig.json  webpack.config.js
render/src/: app.html  app.tsx  index.html  index.ts  index.tsx  ipc.ts
render/src/components/: app.tsx
render/src/css/: style.css
src/: app.cpp  app.h  basic_app.cpp  basic_app.h  basic_client.cpp  basic_client.h  cefsimple_win.cc  client.cpp  client.h  common.cpp  common.h  demo.cpp  main.cpp  msg_handler.cpp  msg_handler.h  simple_app.cc
src/js/: ipc.ts  logic.ts  tsconfig.json
src/js/resources/: app.html
